Added some very basic classfiles, nothing big yet.

--- a/framework/Makefile
+++ b/framework/Makefile
@@ -1,5 +1,5 @@
 include theos/makefiles/common.mk
 FRAMEWORK_NAME = WidgeKit
-WidgeKit_FILES =
+WidgeKit_FILES = WGWidgetViewController.m
 include $(THEOS_MAKE_PATH)/framework.mk
 WidgeKit_INSTALL_PATH = /Library/Frameworks
