Framework now builds and deploys to the correct location. You still need to copy the headers into your sysroot include path, but this will change.

--- a/framework/Makefile
+++ b/framework/Makefile
@@ -3,3 +3,4 @@ FRAMEWORK_NAME = WidgeKit
 WidgeKit_FILES = WGWidgetViewController.m
 include $(THEOS_MAKE_PATH)/framework.mk
 WidgeKit_INSTALL_PATH = /Library/Frameworks
+WidgeKit_FRAMEWORKS = UIKit Foundation
