framework now doesn't need a symlink to theos to work, it'll use your environment variable

--- a/framework/Makefile
+++ b/framework/Makefile
@@ -1,4 +1,4 @@
-include theos/makefiles/common.mk
+include $(THEOS)/makefiles/common.mk
 FRAMEWORK_NAME = WidgeKit
 WidgeKit_FILES = WGWidgetViewController.m
 include $(THEOS_MAKE_PATH)/framework.mk
