--- a/demowidget/Makefile
+++ b/demowidget/Makefile
@@ -1,4 +1,4 @@
-include theos/makefiles/common.mk
+include $(THEOS)/makefiles/common.mk
 
 BUNDLE_NAME = DemoWidget
 DemoWidget_FILES = DemoWidget.m
